--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -29,7 +29,7 @@
     <PublisherName>Works Of Barry</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
-    <ApplicationRevision>18</ApplicationRevision>
+    <ApplicationRevision>19</ApplicationRevision>
     <ApplicationVersion>2.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -216,17 +216,17 @@
     <Compile Include="Forms\ServiceGenerator.Designer.cs">
       <DependentUpon>ServiceGenerator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SPFSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SPFSelect.Designer.cs">
+      <DependentUpon>SPFSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Splash.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ValueWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ValueWindow.Designer.cs">
-      <DependentUpon>ValueWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="UserTools\BindingDirectory.cs">
       <SubType>UserControl</SubType>
@@ -362,11 +362,11 @@
     <EmbeddedResource Include="Forms\ServiceGenerator.resx">
       <DependentUpon>ServiceGenerator.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SPFSelect.resx">
+      <DependentUpon>SPFSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ValueWindow.resx">
-      <DependentUpon>ValueWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
