--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -204,6 +204,12 @@
     <Compile Include="Forms\HelpWindow.Designer.cs">
       <DependentUpon>HelpWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PushWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PushWindow.Designer.cs">
+      <DependentUpon>PushWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\QuickMemberSearch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -355,6 +361,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OpenMember.resx">
       <DependentUpon>OpenMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PushWindow.resx">
+      <DependentUpon>PushWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\QuickMemberSearch.resx">
       <DependentUpon>QuickMemberSearch.cs</DependentUpon>
