--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -199,6 +199,12 @@
     <Compile Include="Forms\NewMember.Designer.cs">
       <DependentUpon>NewMember.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\NewSPF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\NewSPF.Designer.cs">
+      <DependentUpon>NewSPF.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ObjectInformation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -383,6 +389,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewMember.resx">
       <DependentUpon>NewMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\NewSPF.resx">
+      <DependentUpon>NewSPF.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewSystem.resx">
       <DependentUpon>NewSystem.cs</DependentUpon>
